--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^2.28.0",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
@@ -30,6 +31,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/multer": "^1.4.7",
     "nodemon": "^2.0.12",
     "prisma": "^2.28.0",
