--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "redis": "^3.1.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -33,6 +34,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/multer": "^1.4.7",
+    "@types/redis": "^2.8.31",
     "nodemon": "^2.0.12",
     "prisma": "^2.28.0",
     "ts-node": "^10.1.0",
