--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-cookie": "^4.0.3",
