--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,9 @@
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
-    "redis": "^3.1.2"
+    "redis": "^3.1.2",
+    "socket.io": "^4.1.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -37,6 +39,7 @@
     "@types/jsonwebtoken": "^8.5.4",
     "@types/multer": "^1.4.7",
     "@types/redis": "^2.8.31",
+    "@types/uuid": "^8.3.1",
     "nodemon": "^2.0.12",
     "prisma": "^2.28.0",
     "ts-node": "^10.1.0",
